; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/extr_mem68k.c_z80_read_byte.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/extr_mem68k.c_z80_read_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@m68k = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@zram = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @z80_read_byte(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = lshr i32 %4, 13
  %6 = and i32 %5, 3
  switch i32 %6, label %23 [
    i32 2, label %7
    i32 3, label %12
  ]

7:                                                ; preds = %1
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @m68k, i32 0, i32 0), align 4
  %9 = load i32, i32* %3, align 4
  %10 = and i32 %9, 3
  %11 = call i32 @fm_read(i32 %8, i32 %10)
  store i32 %11, i32* %2, align 4
  br label %30

12:                                               ; preds = %1
  %13 = load i32, i32* %3, align 4
  %14 = and i32 %13, 65280
  %15 = icmp eq i32 %14, 32512
  br i1 %15, label %16, label %19

16:                                               ; preds = %12
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @m68k_lockup_r_8(i32 %17)
  store i32 %18, i32* %2, align 4
  br label %30

19:                                               ; preds = %12
  %20 = load i32, i32* %3, align 4
  %21 = call i32 @m68k_read_bus_8(i32 %20)
  %22 = or i32 %21, 255
  store i32 %22, i32* %2, align 4
  br label %30

23:                                               ; preds = %1
  %24 = load i32*, i32** @zram, align 8
  %25 = load i32, i32* %3, align 4
  %26 = and i32 %25, 8191
  %27 = zext i32 %26 to i64
  %28 = getelementptr inbounds i32, i32* %24, i64 %27
  %29 = load i32, i32* %28, align 4
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %23, %19, %16, %7
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @fm_read(i32, i32) #1

declare dso_local i32 @m68k_lockup_r_8(i32) #1

declare dso_local i32 @m68k_read_bus_8(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
